kubernetes/backend/pycount-backend-deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: pycount-backend-deploy
  namespace: pycount
spec:
  selector:
    matchLabels:
      app: pycount-backend
  template:
    metadata:
      labels:
        app: pycout-backend
    spec:
      containers:
        - name: pycount-backend-deploy
          image: duratm/pycount-backend:dev
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3333
          lifecycle:
            postStart:
              exec:
                # Lance la migration
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "node ace migration:run --force",
                  ]
