kubernetes/backend/pycount-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pycount-backend-svc
  namespace: pycount
  labels:
    service: pycount-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3333
      targetPort: 3333
  selector:
    app: pycount-backend
